JS did not like visibility: no longer legal

--- a/css/about.css
+++ b/css/about.css
@@ -63,7 +63,7 @@ h2 #play {
 position: absolute;
 left: 8vw;
 top: 10vh;
-visibility: hidden;
+display: none
 }
 
 #ImageOverlay  {
